basic home page is done

--- a/mypropertyvalue/users/templates/users/investor_buyer.html
+++ b/mypropertyvalue/users/templates/users/investor_buyer.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %}
-<h1>Welcome to MyPropertyValue</h1>
+<h1>Investor Listings</h1>
 <ul>
   {% for property in properties %}
   <li>
