--- a/mypropertyvalue/templates/base.html
+++ b/mypropertyvalue/templates/base.html
@@ -1,18 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}MyPropertyValue{% endblock %}</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'users/styles.css' %}"
+    />
   </head>
   <body>
     <nav>
       <a href="{% url 'home' %}">Home</a>
       <a href="{% url 'retailer_buyer' %}">Retailer Buyer</a>
-      <a href="{% url 'investor_buyer' %}">Investor Buyer</a>
-      <a href="{% url 'seller_page' %}">Sellers</a>
+      <a href="{% url 'investor_buyer' %}">Investor</a>
+      <a href="{% url 'seller_dashboard' %}">Seller</a>
+      <a href="{% url 'login' %}">Login</a>
+      <a href="{% url 'register' %}">Register</a>
     </nav>
 
-    <div>{% block content %}{% endblock %}</div>
+    <div class="container">{% block content %}{% endblock %}</div>
   </body>
 </html>
