--- a/mypropertyvalue/users/templates/users/retailer_buyer.html
+++ b/mypropertyvalue/users/templates/users/retailer_buyer.html
@@ -1,10 +1,51 @@
-{% extends "base.html" %} {% block content %}
-<h1>Retailer Buyer Listings</h1>
-<ul>
-  {% for property in properties %}
-  <li>
-    {{ property.title }} - {{ property.location }} - ${{ property.price }}
-  </li>
-  {% endfor %}
-</ul>
+{% extends 'base.html' %} {% load static %} {% block content %}
+<div class="container">
+  <h2>Retailer Buyer Dashboard</h2>
+
+  <!-- Available Properties Section -->
+  <h3>Available Properties</h3>
+  {% if properties %}
+  <div class="row">
+    {% for property in properties %}
+    <div class="col-md-4">
+      <div class="card mb-4">
+        {% if property.image %}
+        <img
+          src="{{ property.image.url }}"
+          class="card-img-top img-fluid"
+          alt="{{ property.title }}"
+        />
+        {% else %}
+        <img
+          src="{% static 'images/default-property.jpg' %}"
+          class="card-img-top img-fluid"
+          alt="Default Image"
+        />
+        {% endif %}
+        <div class="card-body">
+          <h5 class="card-title">{{ property.title }}</h5>
+          <p><strong>Location:</strong> {{ property.location }}</p>
+          <p><strong>Price:</strong> ${{ property.price }}</p>
+          <p><strong>Status:</strong> {{ property.status }}</p>
+          <p>
+            <strong>Description:</strong> {{
+            property.description|truncatewords:20 }}
+          </p>
+          <a href="{% url 'add_to_cart' property.id %}" class="btn btn-success"
+            >Add to Cart</a
+          >
+          <a
+            href="{% url 'property_details' property.id %}"
+            class="btn btn-primary"
+            >View Details</a
+          >
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+  {% else %}
+  <p>No properties available at the moment.</p>
+  {% endif %}
+</div>
 {% endblock %}
