--- a/mypropertyvalue/templates/base.html
+++ b/mypropertyvalue/templates/base.html
@@ -7,20 +7,109 @@
     <title>{% block title %}MyPropertyValue{% endblock %}</title>
     <link
       rel="stylesheet"
-      type="text/css"
-      href="{% static 'users/styles.css' %}"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
   </head>
+
   <body>
-    <nav>
-      <a href="{% url 'home' %}">Home</a>
-      <a href="{% url 'retailer_buyer' %}">Retailer Buyer</a>
-      <a href="{% url 'investor_buyer' %}">Investor</a>
-      <a href="{% url 'seller_dashboard' %}">Seller</a>
-      <a href="{% url 'login' %}">Login</a>
-      <a href="{% url 'register' %}">Register</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container">
+        <a class="navbar-brand" href="{% url 'home' %}">MyPropertyValue</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            {% if user.is_authenticated %}
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="buyDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Buy
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="buyDropdown">
+                <li>
+                  <a class="dropdown-item" href="{% url 'retailer_buyer' %}"
+                    >Retailer Buyer</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'investor_buyer' %}"
+                    >Investor Buyer</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="sellDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Sell
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="sellDropdown">
+                <li>
+                  <a class="dropdown-item" href="{% url 'retailer_seller' %}"
+                    >Retailer Seller</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'builder_seller' %}"
+                    >Builder Seller</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="{% url 'rented_seller' %}"
+                    >Rented Seller</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'rented_buyer' %}"
+                >Rented Buyer</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'register' %}">Register</a>
+            </li>
+            {% endif %}
+          </ul>
+        </div>
+      </div>
     </nav>
 
-    <div class="container">{% block content %}{% endblock %}</div>
+    <div class="container mt-4">{% block content %}{% endblock %}</div>
+
+    <footer class="footer bg-dark text-white text-center py-3 mt-4">
+      <p>&copy; 2025 MyPropertyValue. All rights reserved.</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
