--- a/mypropertyvalue/users/templates/users/login.html
+++ b/mypropertyvalue/users/templates/users/login.html
@@ -1,8 +1,7 @@
-{% extends "base.html" %} {% block content %}
+{% extends 'base.html' %} {% block content%}
 <h2>Login</h2>
-<form method="POST">
+<form method="post">
   {% csrf_token %} {{ form.as_p }}
   <button type="submit">Login</button>
 </form>
-<a href="{% url 'register' %}">Don't have an account? Register</a>
 {% endblock %}
