--- a/mypropertyvalue/users/templates/users/register.html
+++ b/mypropertyvalue/users/templates/users/register.html
@@ -1,8 +1,7 @@
-{% extends "base.html" %} {% block content %}
+{% extends 'base.html' %} {% block content %}
 <h2>Register</h2>
-<form method="POST">
+<form method="post">
   {% csrf_token %} {{ form.as_p }}
   <button type="submit">Register</button>
 </form>
-<a href="{% url 'login' %}">Already have an account? Login</a>
 {% endblock %}
