--- a/mypropertyvalue/users/templates/users/seller.html
+++ b/mypropertyvalue/users/templates/users/seller.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %} {% block title %}Seller Dashboard{% endblock %} {%
-block content %}
+{% extends 'base.html' %} {% block title %}Seller Dashboard{% endblock %}
+{%block content %}
 <div class="container">
   <h2>Seller Dashboard</h2>
 
