--- a/mypropertyvalue/users/templates/users/home.html
+++ b/mypropertyvalue/users/templates/users/home.html
@@ -19,7 +19,7 @@
         </p>
         <p class="card-text"><strong>Price:</strong> ${{ property.price }}</p>
         <a
-          href="{% url 'property_detail' property.id %}"
+          href="{% url 'property_details' property.id %}"
           class="btn btn-outline-primary"
           >View Details</a
         >
