--- a/mypropertyvalue/users/templates/users/retailer_buyer.html
+++ b/mypropertyvalue/users/templates/users/retailer_buyer.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
 <div class="container">
-  <h2>Retailer Buyer Dashboard</h2>
+  <h2>Rented Buyer Dashboard</h2>
 
   <!-- Available Properties Section -->
   <h3>Available Properties</h3>
