--- a/mypropertyvalue/users/templates/users/rented_buyer.html
+++ b/mypropertyvalue/users/templates/users/rented_buyer.html
@@ -31,25 +31,14 @@
             <strong>Description:</strong> {{
             property.description|truncatewords:20 }}
           </p>
-          <!-- Inquiry Form -->
-          <form method="POST" action="{% url 'rented_buyer' %}">
-            {% csrf_token %}
-            <input type="hidden" name="property_id" value="{{ property.id }}" />
-            <textarea
-              name="message"
-              class="form-control mb-2"
-              placeholder="Enter your inquiry message"
-              required
-            ></textarea>
-            <input
-              type="text"
-              name="contact_info"
-              class="form-control mb-2"
-              placeholder="Enter your contact info"
-              required
-            />
-            <button type="submit" class="btn btn-primary">Send Inquiry</button>
-          </form>
+          <a href="{% url 'add_to_cart' property.id %}" class="btn btn-success"
+            >Add to Cart</a
+          >
+          <a
+            href="{% url 'property_details' property.id %}"
+            class="btn btn-primary"
+            >View Details</a
+          >
         </div>
       </div>
     </div>
