--- a/mypropertyvalue/users/templates/users/investor_portfolio.html
+++ b/mypropertyvalue/users/templates/users/investor_portfolio.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block title %}Investor Portfolio{% endblock %} {%
+<!-- {% extends 'base.html' %} {% block title %}Investor Portfolio{% endblock %} {%
 block content %}
 <h2>Your Portfolio</h2>
 <div class="portfolio-list">
@@ -14,4 +14,4 @@ block content %}
   <p>No properties in your portfolio.</p>
   {% endfor %}
 </div>
-{% endblock %}
+{% endblock %} -->
