--- a/mypropertyvalue/templates/base.html
+++ b/mypropertyvalue/templates/base.html
@@ -86,6 +86,16 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'buyer_transactions' %}"
+                >My Purchases</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'seller_transactions' %}"
+                >My Sales</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'profile' %}">Profile</a>
             </li>
             <li class="nav-item">
