--- a/mypropertyvalue/users/templates/users/property_details.html
+++ b/mypropertyvalue/users/templates/users/property_details.html
@@ -18,8 +18,16 @@
   <p><strong>Price:</strong> ${{ property.price }}</p>
   <p><strong>Status:</strong> {{ property.status }}</p>
   <p><strong>Description:</strong> {{ property.description }}</p>
+
+  {% if property.status == 'Available' %}
   <a href="{% url 'add_to_cart' property.id %}" class="btn btn-success"
     >Add to Cart</a
   >
+  <a href="{% url 'buy_property' property.id %}" class="btn btn-primary"
+    >Buy Now</a
+  >
+  {% else %}
+  <p class="text-danger">This property is no longer available.</p>
+  {% endif %}
 </div>
 {% endblock %}
