--- a/mypropertyvalue/users/templates/users/rented_seller.html
+++ b/mypropertyvalue/users/templates/users/rented_seller.html
@@ -25,7 +25,7 @@
       {% for property in properties %}
       <tr>
         <td>{{ property.title }}</td>
-        <td>${{ property.price }}</td>
+        <td>₹{{ property.price }}</td>
         <td>{{ property.status }}</td>
         <td>
           <a
